Thu Apr 12 20:36:30 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/OS.i (thr_getspecific): Reorder the way in which we check
	  the flags so that ACE_HAS_PTHREADS takes precedence over
 	  ACE_HAS_STHREADS.  Thanks to Munagala Ramanath
 	  <amberarrow@yahoo.com> for reporting this.

Thu Apr 12 21:18:44 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_hpux_aCC.GNU: Added
          -D_RWSTD_MULTI_THREAD -D_REENTRANT to CCFLAGS for stdlibcpp build.
          Makes execution clean, no core dump on program init.

Thu Apr 12 17:31:36 2001  Steve Huston  <shuston@riverace.com>

        * examples/IOStream/server/iostream_server.h: Wrap the guts of this
          in #if !defined (ACE_LACKS_ACE_IOSTREAM) to build clean on platforms
          that can't handle ACE_IOStream.

Thu Apr 12 17:02:41 2001  Steve Huston  <shuston@riverace.com>

        * examples/QOS/Change_Sender_TSpec/sender.dsp:
        * examples/QOS/Change_Sender_TSpec/receiver.dsp:
        * examples/QOS/Change_Receiver_FlowSpec/sender.dsp:
        * examples/QOS/Change_Receiver_FlowSpec/receiver.dsp:
        * examples/QOS/Simple/sender.dsp:
        * examples/QOS/Simple/receiver.dsp: Changed project names from 002
          and 003 to sender and receiver. Corrected relative paths for include
          and library lookup (add another ..).

        * examples/QOS/QOS.dsw: Change project names from 002/003 to sender
          and receiver.

Thu Apr 12 15:48:22 2001  Joe Hoffert  <joeh@cs.wustl.edu>

        * ace/CDR_Stream.i (length):
          Moved definition of length method above any of the methods
          that call into it. Was producing warnings on Tru64 platform.

Thu Apr 12 13:06:27 2001 Joel Sherrill <joel@OARcorp.com>

       	* include/makeinclude/Makefile.rtems: Replaced debug version
	  with real version that queries RTEMS application Makefile
	  infrastructure.
  
        * include/makeinclude/platform_rtems.x_g++.GNU: Added 