@@ -1208,6 +1208,7 @@ Philippe Perrin <perrin@enseirb.fr>
 Gunnar Buason <a98gunbu@student.his.se>
 David Hanvey <d.hanvey@qub.ac.uk>
 Jeff McNiel <Jeff_McNiel@VitalCom.com>
+Georg Lohrer <GeorgLohrer@web.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
