@@ -40,7 +40,10 @@ HREF="../TAO/PROBLEM-REPORT-FORM">$TAO_ROOT/PROBLEM-REPORT-FORM</A>
 will be given a tracking number and entered into our <A
 HREF="http://ace.cs.wustl.edu/bugzilla">bug tracking database</A>.
 Please use these forms since bug reports that are not submitted in
-this form are likely to fall through the cracks.  <P>
+this form are likely to fall through the cracks.  Here is our policy
+for addressing these bug reports: <P>
+
+<OL>
 
 <LI> If a report or question is from someone <A
 HREF="http://www.cs.wustl.edu/~schmidt/ACE-sponsors.html">sponsoring</A>
@@ -55,16 +58,18 @@ in a timely manner. <P>
 a major platform used by our sponsors we will fix it in a timely
 manner, as well. <P>
 
-<LI> If it's a bug report that doesn't fall into the preceding
-category we will treat it like all other bug reports and assign it a
+</OL>
+
+<LI> If it's a bug report that doesn't fall into the preceding three
+categories we will treat it like all other bug reports and assign it a
 tracking number and enter this into our <A
 HREF="http://ace.cs.wustl.edu/bugzilla">bug tracking database</A> for
 future processing.  We will address these bugs as time permits.  If
 you'd like an immediate response, please contact <A
 HREF="mailto:schmidt@cs.wustl.edu">me</A> about becoming a sponsor or
 contact <A HREF="http://www.riverace.com">Riverace</a> or <A
-HREF="http://www.theaceorb.com">OCI</A> for commercial support of ACE or
-TAO, respectively. <P>
+HREF="http://www.theaceorb.com">OCI</A> for commercial support of ACE
+or TAO, respectively. <P>
 
 We encourage bug reports for those without support to be posted
 initially to the <A
@@ -78,6 +83,13 @@ developed, or have an interest in developing, a solution.  While the
 core ACE+TAO development team will continue to participate in this
 mailing list we can not guarantee immediate response to all
 postings. <P>
+
+<LI> If you find a problem with a version of TAO that was released by
+    <A HREF="http://www.theaceorb.com/">OCI</A> then please report it
+    to <A
+    HREF="mailto:taosupport@ociweb.com">taosupport@ociweb.com</A> since
+    their version of TAO is somewhat different from the DOC group's
+    version of TAO and thus they provide their own support. <P>
 
 <LI> If it's a general question about how to use ACE or TAO feature
 we'll try to respond as time permits, though we will also rely on the
